--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,7 @@
 ext {
     // Kotlin
     kotlin_base = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+    kotlin_android_ktx = "androidx.core:core-ktx:1.2.0"
 
     // Rx
     rx_java = "io.reactivex.rxjava2:rxjava:2.2.4"
