--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // Kotlin
     implementation rootProject.ext.kotlin_base
     implementation rootProject.ext.kotlin_android_ktx
+    implementation rootProject.ext.kotlin_coroutine
+    implementation rootProject.ext.kotlin_coroutine_android
 
     // Retrofit
     def retrofit_version = "2.6.0"
@@ -42,6 +44,7 @@ dependencies {
     implementation "se.akerfeldt:okhttp-signpost:1.1.0"
     implementation "oauth.signpost:signpost-core:1.2.1.2"
     implementation "com.squareup.okhttp3:logging-interceptor:4.1.0"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Moshi
     def moshiVersion = "1.8.0"
@@ -54,7 +57,9 @@ dependencies {
     testImplementation rootProject.ext.junit
     testImplementation rootProject.ext.mockito
     testImplementation rootProject.ext.hamcrest
+    testImplementation rootProject.ext.coroutine_test
     androidTestImplementation rootProject.ext.androidx_test
+    androidTestImplementation rootProject.ext.coroutine_test
     androidTestImplementation rootProject.ext.mockito
     androidTestImplementation rootProject.ext.android_test_runner
     androidTestImplementation rootProject.ext.android_test_espresso
