--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 def twitterProperties = new Properties()
 twitterProperties.load(new FileInputStream(rootProject.file("twitter.properties")))
@@ -33,11 +34,44 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    // Android
     implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
+    // Kotlin
+    implementation rootProject.ext.kotlin_base
+    implementation rootProject.ext.kotlin_coroutine
+    implementation rootProject.ext.kotlin_coroutine_android
+
+    // Dagger
+    implementation rootProject.ext.dagger
+    kapt rootProject.ext.dagger_compiler
+    implementation rootProject.ext.dagger_android
+    kapt rootProject.ext.dagger_android_processor
+    implementation rootProject.ext.dagger_android_support
+    kapt rootProject.ext.dagger_android_support
+
+    // Tests
+    testImplementation rootProject.ext.junit
+    androidTestImplementation rootProject.ext.android_test_runner
+    androidTestImplementation rootProject.ext.android_test_espresso
+
+    def lifecycleVersion = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+
+    // Glide
+    def glide_version = "4.11.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // Modules
+    implementation project(':data')
+    implementation project(':domain')
+
 }
