--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.home.HomeActivity"/>
 
     </application>
 
