--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 def twitterProperties = new Properties()
 twitterProperties.load(new FileInputStream(rootProject.file("twitter.properties")))
@@ -61,14 +62,20 @@ dependencies {
     androidTestImplementation rootProject.ext.android_test_runner
     androidTestImplementation rootProject.ext.android_test_espresso
 
+    // Lifecycle
     def lifecycleVersion = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
     // Glide
     def glide_version = "4.11.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // Twitter
+    implementation 'com.twitter.sdk.android:twitter:3.1.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
 
     // Modules
     implementation project(':data')
