--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
+    // Paging
+    implementation "androidx.paging:paging-runtime:2.1.2"
+
     // Image
     implementation 'com.github.TeleClinic:SmartImageView:1.1.0'
 
