--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ twitterProperties.load(new FileInputStream(rootProject.file("twitter.properties"
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
+    
     defaultConfig {
         applicationId "com.inkiu.twittersample"
         minSdkVersion 23
@@ -21,6 +21,15 @@ android {
         buildConfigField("String", "CONSUMER_SECRET", twitterProperties['CONSUMER_SECRET'])
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildTypes {
