--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.home.HomeActivity"/>
+        <activity android:name=".ui.detail.DetailActivity"/>
 
     </application>
 
